--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ target_link_libraries(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
+
 source_group(TREE "${CMAKE_CURRENT_LIST_DIR}"
     FILES
         ${source_files}
