Install missing lib

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
           sudo add-apt-repository ppa:ecal/ecal-latest
           sudo apt-get update
-          sudo apt-get install ecal
+          sudo apt-get install ecal libprotobuf-dev
 
     - name: Extract eCAL Version Number
       run: |
