--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -72,4 +72,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ env.PROJECT_NAME }}-${{ env.os_name }}-${{ env.cpu_architecture }}-ecal-${{ env.ECAL_VERSION }}
-        path: ${{ runner.workspace }}/${{ env.INSTALL_PREFIX }}/bin/*
+        path: ${{ runner.workspace }}/_build/${{ env.INSTALL_PREFIX }}/bin/${{ env.PROJECT_NAME }}
