--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Extract eCAL Version Number
       run: |
         ECAL_VERSION=$(dpkg -s ecal | grep '^Version:' | sed 's@^[^0-9]*\([0-9.]\+\).*@\1@' | cut -d"." -f-2)
-        echo "ecal_version=${ECAL_VERSION}" >> "$GITHUB_ENV"
+        echo "ECAL_VERSION=${ECAL_VERSION}" >> "$GITHUB_ENV"
         
     - name: Checkout
       uses: actions/checkout@v3
