--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -64,4 +64,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ env.PROJECT_NAME }}-windows-ecal-${{env.ECAL_VERSION}}
-        path: ${{ runner.workspace }}\${{ env.INSTALL_PREFIX }}\bin\*.exe
+        path: ${{ runner.workspace }}\${{ env.INSTALL_PREFIX }}\samples\bin\*.exe
